[package]
name = "ajuna-node-template"
version = "0.1.0"
authors = ["Ajuna Network <https://github.com/ajuna-network>"]
edition = "2021"
description = "A fresh FRAME-based Substrate node, ready for hacking."
homepage = "https://substrate.io/"
license = "Apache-2.0"
repository = "https://github.com/ajuna-network/ajuna-node-template"
build = "build.rs"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "ajuna-node"
path = "./src/main.rs"

[dependencies]
clap = { workspace = true }
futures = { workspace = true }

# Substrate and SC dependencies
sc-cli = { workspace = true }
sc-executor = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-keystore = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", version = "0.10.0-dev" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", version = "0.10.0-dev" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", version = "0.10.0-dev" }
sc-client-api = { workspace = true }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.42" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.42" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", version = "7.0.0", default-features = false, branch = "polkadot-v0.9.42" }
frame-system = { workspace = true }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.42" }

# RPC Dependencies
jsonrpsee = { workspace = true }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "polkadot-v0.9.42" }
sp-api = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.42" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "polkadot-v0.9.42" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.42" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.42" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "polkadot-v0.9.42" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "polkadot-v0.9.42" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "polkadot-v0.9.42" }

# Runtime Dependency
ajuna-node-template-runtime = { workspace = true }

# CLI-specific dependencies
try-runtime-cli = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", optional = true, branch = "polkadot-v0.9.42" }

# Optional Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", optional = true, default-features = false, branch = "polkadot-v0.9.42" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", optional = true, default-features = false, branch = "polkadot-v0.9.42" }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
runtime-benchmarks = [
    "ajuna-node-template-runtime/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-benchmarking-cli/runtime-benchmarks",
]
try-runtime = [
    "ajuna-node-template-runtime/try-runtime",
    "try-runtime-cli/try-runtime"
]
