[package]
name = "pallet-ajuna-board"
version = "0.1.0"
authors = ["Ajuna Network <https://github.com/ajuna-network>"]
edition = "2021"
description = "Ajuna Network pallet board pallet"
homepage = "https://ajuna.io"
license = "Apache-2.0"
repository = "https://github.com/ajuna-network/Ajuna"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
pallet-ajuna-matchmaker = { workspace = true }

# Optional Dependency
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", default-features = false, optional = true, branch = "polkadot-v0.9.42" }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-ajuna-matchmaker/std"
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = ["frame-benchmarking"]
