[package]
name = "pallet-ajuna-matchmaker"
version = "0.1.0"
authors = ["Ajuna Network <https://github.com/ajuna-network>"]
edition = "2021"
description = "Ajuna Network pallet matchmaker for creating matches between players."
homepage = "https://ajuna.io"
license = "Apache-2.0"
repository = "https://github.com/ajuna-network/Ajuna"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std"
]
try-runtime = ["frame-support/try-runtime"]
