[package]
authors     = [ "Your Name <your.email@example.com>" ]
description = "Pallet for storing RPG-style cards with stats."
edition     = "2021"
homepage    = "https://example.com"
license     = "Apache-2.0"
name        = "pallet-eterra-card"
repository  = "https://github.com/your-repo"
version     = "0.1.0"
publish     = false

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec = { default-features = false, features = ["derive", "max-encoded-len"], package = "parity-scale-codec", version = "3.0.0" }
scale-info = { default-features = false, features = ["derive"], version = "2.1.1" }
log = { version = "0.4", default-features = false }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }

[features]
default     = [ "std" ]
std         = [ "codec/std", "scale-info/std", "frame-support/std", "frame-system/std", "sp-std/std" ]
try-runtime = [ "frame-support/try-runtime" ]
